Fix the contrast on search input text
Grey-on-white is an accessibility issue; black text is an improvement.

--- a/library.css
+++ b/library.css
@@ -8,6 +8,9 @@
 
 /* SEARCH AREA */
 #librarySearchContent { overflow:hidden; }
+.input-append input.searchbox[type="text"] {
+    color: black;
+}
 #librarySearchContent select { border: 2px solid #BDC3C7; }
 #librarySearch .caret { font-size:10px; }
 
